--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <a href="https://www.revenuecpmgate.com/eg8j5pvzgt?key=5026c1f454dea43e509911bd33eadc46">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+ </a>
   </body>
 </html>
